# bus-outbox

./: Cargo.toml  Dockerfile  compose.yaml  justfile
.sqlx/: query-41691efe0e52973bdbb082b52dfdf5425dd8f345f91cbd53f58b4e7342d89b3b.json  query-744de3f998ec72ca6541705d55b4c91af5cb41e56bafeaeb675d630323a2087a.json  query-c2bb492bdc038e0f854363abe8cb75a37ba3b1c862200d394002a5eebbd44e40.json
migrations/: 20240727122134_initial.down.sql  20240727122134_initial.up.sql
src/: db_models.rs  lib.rs  main.rs  migrate.rs  produce.rs
tests/: conftest.py  test_all.py
