[package]
name = "bus-outbox"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive", "env"] }
eyre = "0.6.12"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros", "signal"] }
